successes/failures, verb conjuagtion

--- a/translate_frequency.ipynb
+++ b/translate_frequency.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from wordfreq import word_frequency\n",
@@ -3240,13 +3242,6 @@
     "with open('es_en_wordfeats.txt','w') as fp:\n",
     "    fp.writelines(newlines)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
