--- a/feature_explorer.ipynb
+++ b/feature_explorer.ipynb
@@ -1,27 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3]"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a=[1,2,3,4]\n",
-    "[i for i in range(1,len(a))]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -74,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 167,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 168,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 171,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -182,308 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'client:ios': 1.0,\n",
-       " 'context_rep': 1,\n",
-       " 'days': 2.025,\n",
-       " 'episode_spacing': 1.9929999999999999,\n",
-       " 'exercise_length': 4,\n",
-       " 'exercise_num': 30,\n",
-       " 'format:reverse_translate': 1.0,\n",
-       " 'session:practice': 1.0}"
+       "[<__main__.User at 0x10ab7db38>,\n",
+       " <__main__.User at 0x18d96ab70>,\n",
+       " <__main__.User at 0x1a2832c88>,\n",
+       " <__main__.User at 0x1861a54e0>,\n",
+       " <__main__.User at 0x10f168b00>,\n",
+       " <__main__.User at 0x10b66c470>,\n",
+       " <__main__.User at 0x18d8974a8>,\n",
+       " <__main__.User at 0x18aa71710>,\n",
+       " <__main__.User at 0x18275aef0>,\n",
+       " <__main__.User at 0x1830236d8>]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_x[8].exercises[30].features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "0\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.9929999999999999\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.5430000000000001\n",
-      "1.688666666666667\n",
-      "1.688666666666667\n",
-      "1.688666666666667\n",
-      "1.688666666666667\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.50875\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.6042\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.454666666666667\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.7168571428571429\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.6275\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.562111111111111\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.5081\n",
-      "1.4361818181818182\n",
-      "1.4361818181818182\n",
-      "1.4361818181818182\n",
-      "1.4361818181818182\n",
-      "1.4361818181818182\n",
-      "1.4361818181818182\n",
-      "1.4264999999999999\n",
-      "1.4264999999999999\n",
-      "1.4264999999999999\n",
-      "1.4264999999999999\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5280769230769229\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.5015\n",
-      "1.4663333333333335\n",
-      "1.4663333333333335\n",
-      "1.4663333333333335\n",
-      "1.4663333333333335\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n",
-      "1.37925\n"
-     ]
-    }
-   ],
-   "source": [
-    "subj=train_x[8]\n",
-    "\n",
-    "for i in range(len(subj.exercises)):\n",
-    "    print(subj.compute_spacing(subj.exercises[:i]))"
+    "train_x"
    ]
   },
   {
