add modeling section to paper

--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -1,8 +1,27 @@
 
-
 @inproceedings{slam18,
   Author = {B. Settles and C. Brust and E. Gustafson and M. Hagiwara and N. Madnani},
   Booktitle = {Proceedings of the NAACL-HLT Workshop on Innovative Use of NLP for Building Educational Applications (BEA)},
   Publisher = {ACL},
   Title = {Second Language Acquisition Modeling},
-  Year = {2018}}
+  Year = {2018}
+  }
+
+@inproceedings{ke2017lightgbm,
+  title={LightGBM: A highly efficient gradient boosting decision tree},
+  author={Ke, Guolin and Meng, Qi and Finley, Thomas and Wang, Taifeng and Chen, Wei and Ma, Weidong and Ye, Qiwei and Liu, Tie-Yan},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3149--3157},
+  year={2017}
+}
+
+@article{fisher1958grouping,
+  title={On grouping for maximum homogeneity},
+  author={Fisher, Walter D},
+  journal={Journal of the American statistical Association},
+  volume={53},
+  number={284},
+  pages={789--798},
+  year={1958},
+  publisher={Taylor \& Francis Group}
+}
