word freq and edit distance description

--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -25,3 +25,47 @@
   year={1958},
   publisher={Taylor \& Francis Group}
 }
+
+@misc{robert_speer_2017_998161,
+author = {Robert Speer and
+Joshua Chin and
+Andrew Lin and
+Sara Jewett and
+Lance Nathan},
+title = {LuminosoInsight/wordfreq: v1.7},
+month = sep,
+year = 2017,
+doi = {10.5281/zenodo.998161},
+url = {https://doi.org/10.5281/zenodo.998161}
+}
+
+@article{hyyro2001explaining,
+  title={Explaining and extending the bit-parallel approximate string matching algorithm of Myers},
+  author={Hyyr{\"o}, Heikki},
+  journal={Technical report in Journal of the ACM},
+  pages={408},
+  year={2001},
+  publisher={Citeseer}
+}
+
+@article{rayner1998eye,
+  title={Eye movements in reading and information processing: 20 years of research.},
+  author={Rayner, Keith},
+  journal={Psychological bulletin},
+  volume={124},
+  number={3},
+  pages={372},
+  year={1998},
+  publisher={American Psychological Association}
+}
+
+@article{de2000hard,
+  title={What is hard to learn is easy to forget: The roles of word concreteness, cognate status, and word frequency in foreign-language vocabulary learning and forgetting},
+  author={De Groot, Annette and Keijzer, Rineke},
+  journal={Language Learning},
+  volume={50},
+  number={1},
+  pages={1--56},
+  year={2000},
+  publisher={Wiley Online Library}
+}
