--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -78,15 +78,14 @@ their high cardinality, these features were not one-hot encoded but were
 preserved in single columns and handled in this form by the model (as described
 below).
 
-Along with the tokens themselves we encoded instance word's part of speech,
+Along with the tokens themselves we encoded \hl{each} instance word's part of speech,
 morphological features, and dependency edge label. (We noticed that some words
 in the original dataset were paired with the wrong morphological features,
-particularly near where punctuation had been removed from the sentence. To fix,
+particularly near where punctuation had been removed from the sentence. To fix
 this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.)
 
 We also encoded word length and several word characteristics gleaned from
-external data sources. \hl{PAM AND DAVID FILL IN HERE WITH FREQ, LEVENSHTEIN, AND
-AOA}.
+external data sources. The word frequency effect suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein or edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. \hl{DAVID FILL IN HERE WITH AOA}. 
 
 \subsubsection{User features}
 
