--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -108,9 +108,8 @@ categorical variables were one-hot encoded.
 
 \subsubsection{Exercise features}
 
-We encoded the exercise client, session, format, and time (i.e., number of
-seconds to complete the exercise), as well as the exercise number and number of
-days since start of usage.
+We encoded the exercise number, client, session, format, and duration (i.e., number of
+seconds to complete the exercise), as well as the time since the user started using Duolingo for the first time.
 
 \subsubsection{Word features}
 
@@ -127,13 +126,20 @@ particularly near where punctuation had been removed from the sentence. To fix
 this, we re-processed the data using Google SyntaxNet\footnote{https://github.com/ljm625/syntaxnet-rest-api}.)
 
 We also encoded word length and several word characteristics gleaned from
-external data sources. The word frequency effect suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein or edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. \hl{DAVID FILL IN HERE WITH AOA}. 
+external data sources. The word frequency effect suggests that uncommon words are harder to process than common words; readers will look longer at low-frequency words and perform worse in word-identification tasks for these than for high-frequency words \cite{rayner1998eye}. We therefore included a feature that encoded the frequency of each word in the language being acquired, calculated from \citet{robert_speer_2017_998161}. Additionally, cognates, or words sharing a common linguistic derivation, are easier to learn than words with dissimilar translations \cite{de2000hard}. As an approximate measure of linguistic similarity, we used the Levenshtein edit distance between the word tokens and their translations scaled by the length of the longer word. We found translations using Google Translate\footnote{https://cloud.google.com/translate/} and calculated the Levenshtein distance to reflect the letter-by-letter similarity of the word and its translation \cite{hyyro2001explaining}. \hl{DAVID FILL IN HERE WITH AOA}. 
 
 \subsubsection{User features}
 
 Just as we did for word tokens, we encoded the user ID as a single-column,
 high-cardinality feature. We also calculated several other user-level features.
-\hl{TODD AND ANSELM HERE}
+
+\hl{ANSELM HERE}
+
+Feature 1: Motivation %compute_motivation
+
+Feature 2: Consistency %compute_usage_entropy
+
+
 
 \subsubsection{Positional features}
 
@@ -225,6 +231,7 @@ LightGBM hyperparameters used for each model are listed in Table~\ref{lightgbm-p
 
 
 \begin{table}[t!]
+\small
 \begin{center}
 \begin{tabular}{|l|llll|}
   % \hline   & \multicolumn{3}{l}{\bf Value} & \\
