add description of lesions

--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -271,3 +271,14 @@ url="https://doi.org/10.3758/s13428-012-0210-4"
 	Title = {What is hard to learn is easy to forget: The roles of word concreteness, cognate status, and word frequency in foreign-language vocabulary learning and forgetting},
 	Volume = {50},
 	Year = {2000}}
+
+@article{yonelinas2002nature,
+  title={The nature of recollection and familiarity: A review of 30 years of research},
+  author={Yonelinas, Andrew P},
+  journal={Journal of memory and language},
+  volume={46},
+  number={3},
+  pages={441--517},
+  year={2002},
+  publisher={Elsevier}
+}
