--- a/doc/naaclhlt2018-latex/paper.bib
+++ b/doc/naaclhlt2018-latex/paper.bib
@@ -282,3 +282,12 @@ url="https://doi.org/10.3758/s13428-012-0210-4"
   year={2002},
   publisher={Elsevier}
 }
+
+@inproceedings{settles2016trainable,
+  title={A trainable spaced repetition model for language learning},
+  author={Settles, Burr and Meeder, Brendan},
+  booktitle={Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  volume={1},
+  pages={1848--1858},
+  year={2016}
+}
