fixed a bug in description of language pairs

--- a/doc/naaclhlt2018-latex/paper.tex
+++ b/doc/naaclhlt2018-latex/paper.tex
@@ -50,7 +50,7 @@ This is the abstract
 \section{Introduction}
 
 Educational software that aims to teach people new skills, languages, and
-even academic subjects have become increasingly popular.  The wide-spread
+academic subjects have become increasingly popular.  The wide-spread
 deployment of these tools has created interesting opportunities to study
 the process of learning in extremely large samples of learners in naturalistic
 situations. The Duolingo shared task on Second Lanugage Acquisition Modeling (SLAM)
@@ -59,11 +59,12 @@ The challenge, organized by Duolingo\footnote{http://duolingo.com}, a popular se
 language learning app, was
 to use log data from thousand of users completing millions of exercises 
 predict patterns of future translation mistakes in held-out data.  The data set was
-divided into three sets covering students learning to translate English to Spanish (ES$\to$EN),
-Spanish to English (ES$\to$EN), and French to English (FR$\to$EN).
+divided into three sets covering Spanish speakers learning English ({\tt en\_es}),
+English speakers learning Spanish ({\tt es\_en}), and English speakers learning
+French ({\tt fr\_en}).
 This paper reports the approach used by our team which ended in third place 
-for the ES$\to$EN data set, second place for the ES$\to$EN data set, and third place
-for FR$\to$EN.
+for the {\tt en\_es} data set, second place for {\tt es\_en}, and third place
+for {\tt fr\_en}.
 
 Our lab's interest in this competition comes from our emphasis on studying human learning
 and memory from a psychological perspective.  While the Duolingo SLAM dataset 
